Completed The Calculator Project With Whole New Code

--- a/index.html
+++ b/index.html
@@ -8,7 +8,30 @@
     <title>Basic Calculator</title>
 </head>
 <body>
-    
+    <section class="container">
+        <div class="calculator">
+            <input type="text" name="" id="screen" placeholder="0">
+            <button id="clear">C</button>
+            <button id="delete">Del</button>
+            <button onclick="display(`/`)" id="btn">/</button>
+            <button onclick="display(`%`)" id="btn">%</button>
+            <button onclick="display(`7`)" id="btn">7</button>
+            <button onclick="display(`8`)" id="btn">8</button>
+            <button onclick="display(`9`)" id="btn">9</button>
+            <button onclick="display(`*`)" id="btn">*</button>
+            <button onclick="display(`4`)" id="btn">4</button>
+            <button onclick="display(`5`)" id="btn">5</button>
+            <button onclick="display(`6`)" id="btn">6</button>
+            <button onclick="display(`-`)" id="btn">-</button>
+            <button onclick="display(`1`)" id="btn">1</button>
+            <button onclick="display(`2`)" id="btn">2</button>
+            <button onclick="display(`3`)" id="btn">3</button>
+            <button onclick="display(`+`)" id="btn">+</button>
+            <button onclick="display(`.`)" id="btn">.</button>
+            <button onclick="display(`0`)" id="btn">0</button>
+            <button id="equal">=</button>
+        </div>
+    </section>
 </body>
 <script src="index.js"></script>
 </html>
